agent-platforms/salesforce/apex-observability/force-app/main/default/objects/A365_Observability_Config__mdt/A365_Observability_Config__mdt.object-meta.xml
<CustomObject>
    <label>A365 Observability Config</label>
    <pluralLabel>A365 Observability Config</pluralLabel>
</CustomObject>