agent-platforms/salesforce/apex-observability/force-app/main/default/objects/A365_Observability_Config__mdt/fields/AgentId__c.field-meta.xml
<CustomField>
    <fullName>AgentId__c</fullName>
    <description>Runtime agent id; must equal the obs token azp/appid.</description>
    <label>Agent Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>