agent-platforms/salesforce/apex-observability/force-app/main/default/objects/A365_Observability_Config__mdt/fields/BlueprintId__c.field-meta.xml
<CustomField>
    <fullName>BlueprintId__c</fullName>
    <description>Optional Agent 365 agent blueprint id. Emitted as the invoke_agent span attribute microsoft.a365.agent.blueprint.id, mapped to CloudAppEvents TargetAgentBlueprintID. Enriches the session record so the Admin Center shows the blueprint this agent is an instance of.</description>
    <label>Blueprint Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>