agent-platforms/salesforce/apex-observability/force-app/main/default/objects/A365_Observability_Config__mdt/fields/ChannelName__c.field-meta.xml
<CustomField>
    <fullName>ChannelName__c</fullName>
    <description>Optional channel name for Agentforce-originated turns. Emitted as the invoke_agent span attribute microsoft.channel.name, mapped to CloudAppEvents ChannelName. Falls back to 'agentforce' when blank.</description>
    <label>Channel Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>