agent-platforms/salesforce/apex-observability/force-app/main/default/objects/A365_Observability_Config__mdt/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Master kill-switch. When false the emitter is a no-op (never enqueues, never calls out).</description>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>