agent-platforms/salesforce/apex-observability/force-app/main/default/objects/A365_Observability_Config__mdt/fields/IngestBase__c.field-meta.xml
<CustomField>
    <fullName>IngestBase__c</fullName>
    <description>Base URL for the observability ingest endpoint.</description>
    <label>Ingest Base</label>
    <length>255</length>
    <type>Text</type>
</CustomField>