agent-platforms/salesforce/apex-observability/force-app/main/default/objects/A365_Observability_Config__mdt/fields/ObsScope__c.field-meta.xml
<CustomField>
    <fullName>ObsScope__c</fullName>
    <description>Hop 3 scope for the agent-bound observability token (.default).</description>
    <label>Obs Scope</label>
    <length>255</length>
    <type>Text</type>
</CustomField>