agent-platforms/salesforce/apex-observability/force-app/main/default/objects/A365_Observability_Config__mdt/fields/OriginateEnabled__c.field-meta.xml
<CustomField>
    <fullName>OriginateEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Master switch for the Agentforce trace-ORIGINATION path (invoke_agent root + nested children), independent of the boundary Enabled__c.</description>
    <label>Originate Enabled</label>
    <type>Checkbox</type>
</CustomField>