agent-platforms/salesforce/apex-observability/force-app/main/default/objects/A365_Observability_Config__mdt/fields/TenantId__c.field-meta.xml
<CustomField>
    <fullName>TenantId__c</fullName>
    <description>Agent 365 tenant id (URL + x-ms-tenant-id + resource microsoft.tenant.id).</description>
    <label>Tenant Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>