agent-platforms/salesforce/apex-observability/force-app/main/default/objects/A365_Observability_Config__mdt/fields/UseS2SEndpoint__c.field-meta.xml
<CustomField>
    <fullName>UseS2SEndpoint__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Deprecated compatibility field. OBS always uses /observabilityService; false is ignored and never selects the legacy route.</description>
    <label>Use S2S Endpoint (Deprecated)</label>
    <type>Checkbox</type>
</CustomField>